--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -13,12 +13,15 @@ $colorRed: #A62E44;
 $colorGray: #514C57;
 $colorGray2: #514c57d3;
 $colorGrayLight: #514c579a;
-$colorGrayTransparent: #514c5799;
+$colorGrayTransparent: #2b2a2c99;
+$colorGrayFont: #737373;
 $colorPink: #F2A7BB;
 $colorPinkLight: #f2a7bbbe;
 $colorBlueLight: #41CAD9;
 $colorTwitter: #00ACEE;
 $colorYellow: #FFFF9C;
+$colorYellowIntense: #f3ce00;
+$colorYellowLight: #FFFEDD;
 $colorWhitePure: #ffffff;
 $colorWhite: #F7FFF4;
 $colorBeige: #dedede;
