--- a/assets/style.scss
+++ b/assets/style.scss
@@ -14,7 +14,7 @@ header {
     left: 0;
     width: 100%;
     height: 80px;
-    z-index: 1;
+    z-index: 10;
 }
 
 h1 {
@@ -37,9 +37,17 @@ h1 span {
 
 h2 {
     color: $colorBlueLight;
-    font-size: 80px !important;
+    font-size: 80px;
     font-family: 'Paytone One', sans-serif;
     font-weight: bold;
+
+    @media (max-width: 1440px) {
+        font-size: 70px;
+    }
+
+    @media (max-width: 767px) {
+        font-size: 38px;
+    }
 }
 
 h3, legend{
@@ -53,14 +61,28 @@ h3, legend{
     display: flex;
     flex-direction: column;
     padding: 0 50px;
+
+    @media (max-width: 767px) {
+        padding: 0 20px;
+    }
 }
 
 .title {
     margin: 80px 0;
+
+    @media (max-width: 768px) {
+        margin: 80px 0 45px 0;
+    }
 }
 
 .text {
     font-size: 25px;
+
+    @media (max-width: 767px) {
+        font-size: 18px;
+        line-height: 30px;
+        margin-bottom: 20px;
+    }
 }
 
 .textAlt {
@@ -78,11 +100,5 @@ h3, legend{
 
 .textBold {
     font-weight: bold;
-}
-
-.bg-pattern {
-    background-image: linear-gradient(rgba(255,255,255,0.93), rgba(255,255,255,.93)), 
-    url(../images/pattern.jpg);
-    background-repeat: repeat;
 }
 
