--- a/views/promos.html
+++ b/views/promos.html
@@ -1,92 +1,103 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<!-- Meta-etiquetas -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="keywords" content="pasteleria, tortas, donas, alfajores, galletas, postres, tartas dulces, chocolate, crema, frutas">
+	<meta name="keywords" content="pasteleria, tortas, donas, alfajores, galletas, postres, tartas dulces, chocolate, crema, frutas, harinas, sabores, colores huevos, comida, comida rica, merienda, aroma, calidad, promociones, gourmet">
 	<meta name="description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
 	<meta property="og:title" content="Bakery Bake | Pasteleria Gourmet">
 	<meta property="og:url" content="https://bakery-bake.com">
 	<meta property="og:description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
-    <link rel="stylesheet" href="../assets/style.css">
+	<!-- Fuentes -->
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
+	<!-- Iconos -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
 	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+	<!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<!-- Estilos -->
+	<link rel="stylesheet" href="../assets/style.css">
+	<!-- Titulo -->
 	<title>Promos | Bakery Bake</title>
 </head>
 
 <body>
-    <header>
+	<!-- Barrra de Navegacion -->
+	<header>
 		<div class="main-nav">
-			<a href="../index.html"><img src="../images/logo.png"  class="main-nav__logo" alt="logo"></a>
+			<a href="../index.html"><img src="../images/logo.png" class="main-nav__logo" alt="logo"></a>
 
-			<nav class="main-nav__list">
+			<nav class="main-nav__list" id="menu-nav">
+
+				<span class="main-nav__button" id="menu-button">
+					<i class="main-nav__button__icon open fas fa-bars"></i>
+					<i class="main-nav__button__icon close fas fa-times"></i>				
+				</span>
+
 				<ul class="main-nav__item">
 					<li class="main-nav__link"><a href="../index.html">NOSOTROS</a></li>
-					<li class="main-nav__link"><a href="./productos.html">PRODUCTOS</a></li>
-					<li class="main-nav__link"><a href="./servicios.html">SERVICIOS</a></li>
-					<li class="main-nav__link"><a class="selected" href="./promos.html">PROMOS</a></li>
-					<li class="main-nav__link"><a href="./contacto.html">CONTACTO</a></li>
+					<li class="main-nav__link"><a href="../views/productos.html">PRODUCTOS</a></li>
+					<li class="main-nav__link"><a href="../views/servicios.html">SERVICIOS</a></li>
+					<li class="main-nav__link"><a class="selected" href="#">PROMOS</a></li>
+					<li class="main-nav__link"><a href="../views/contacto.html">CONTACTO</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
     
-    <section class="cntGeneral bg-pattern">
+    <section class="cntGeneral">
 		<div class="offers">
+			<!-- Tiutulo de Pagina -->
 			<div class="offers__title">
 				<h2 class="title">Nuestras Promos</h2>
 			</div>
 
-			<div class="offers__cards">
-				<div class="box">
-					<div class="box__img promo1">
-						<div class="box__title">
-							20% DESCUENTO
-						</div>
-					</div>
-					<div class="box__description text">
-						Galletas navideñas sabor limon x 12 unidades
-					</div>
-				</div>
-			
-				<div class="box">
-					<div class="box__img promo2">
-						<div class="box__title">
-							LLEVA 12 PAGA 10
-						</div>
-					</div>
-					<div class="box__description text">
-						Alfajores de dulce de leche bañados en chocolate
+			<div class="cards offers__cards">
+				<div class="card">
+					<div class="card-img-top imgBox promo1"></div>
+					<div class="card-body">
+						<div class="card-title bakeryCardTitle">20% DESCUENTO</div>
+						<p class="card-text bakeryCardText">Galletas navideñas sabor limon x 12 unidades.</p>
 					</div>
 				</div>
 
-				<div class="box">
-					<div class="box__img promo3">
-						<div class="box__title">
-							30% DESCUENTO
-						</div>
+				<div class="card">
+					<div class="card-img-top imgBox promo2"></div>
+					<div class="card-body">
+						<div class="card-title bakeryCardTitle">LLEVA 12 PAGA 10</div>
+						<p class="card-text bakeryCardText">Alfajores de dulce de leche bañados en chocolate.</p>
 					</div>
-					<div class="box__description text">
-						Mini tarteletas con frutas de estacion
+				</div>
+
+				<div class="card">
+					<div class="card-img-top imgBox promo3"></div>
+					<div class="card-body">
+						<div class="card-title bakeryCardTitle">30% DESCUENTO</div>
+						<p class="card-text bakeryCardText">Mini tarteletas con frutas de estacion.</p>
 					</div>
 				</div>
 			</div>
+		
 		</div>
 	</section>
   
+	<!-- Footer -->
 	<footer class="cntFooter">
 		<span>© 2021— My Bakery Bake Page</span>
 		<div>
 			<ul class="socialMedia">
-				<li><i class="fab fa-facebook"></i></li>
-				<li><i class="fab fa-whatsapp"></i></li>
-				<li><i class="fab fa-instagram"></i></li>
-				<li><i class="fab fa-twitter-square"></i></li>
+				<li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook iconColor"></i></a></li>
+				<li><a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp iconColor"></i></a></li>
+				<li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram iconColor"></i></a></li>
+				<li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square iconColor"></i></a></li>
 			</ul>
 		</div>
-	</footer>
+</footer>
+
+	<!-- JavaScript -->
+	<script src="../assets/app.js"></script>
 </body>
 </html>
