--- a/views/servicios.html
+++ b/views/servicios.html
@@ -1,106 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Meta-etiquetas -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="keywords" content="pasteleria, tortas, donas, alfajores, galletas, postres, tartas dulces, chocolate, crema, frutas">
+    <meta name="keywords" content="pasteleria, tortas, donas, alfajores, galletas, postres, tartas dulces, chocolate, crema, frutas, harinas, sabores, colores huevos, comida, comida rica, merienda, aroma, calidad, promociones, gourmet">
 	<meta name="description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
 	<meta property="og:title" content="Bakery Bake | Pasteleria Gourmet">
 	<meta property="og:url" content="https://bakery-bake.com">
 	<meta property="og:description" content="Somos fabricantes de los mejores postres de la ciudad de Rosario. Te acompañamos en todos tus eventos con los mejores sabores y decoraciones. No dudes en contactarnos!">
-    <link rel="stylesheet" href="../assets/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Fuentes -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Mr+De+Haviland&family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300&family=Paytone+One&display=swap" rel="stylesheet">
+    <!-- Iconos -->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
-	<link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../images/logo.png" type="image/x-icon">
+    <!-- Bootstrap -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <!-- Estilos -->
+    <link rel="stylesheet" href="../assets/style.css">
+    <!-- Titulo -->
     <title>Servicios | Bakery Bake</title>
 </head>
 
 <body>
-    <header>
+    <!-- Barrra de Navegacion -->
+	<header>
 		<div class="main-nav">
-			<a href="../index.html"><img src="../images/logo.png"  class="main-nav__logo" alt="logo"></a>
+			<a href="../index.html"><img src="../images/logo.png" class="main-nav__logo" alt="logo"></a>
 
-			<nav class="main-nav__list">
+			<nav class="main-nav__list" id="menu-nav">
+
+				<span class="main-nav__button" id="menu-button">
+					<i class="main-nav__button__icon open fas fa-bars"></i>
+					<i class="main-nav__button__icon close fas fa-times"></i>				
+				</span>
+
 				<ul class="main-nav__item">
 					<li class="main-nav__link"><a href="../index.html">NOSOTROS</a></li>
 					<li class="main-nav__link"><a href="./productos.html">PRODUCTOS</a></li>
-					<li class="main-nav__link"><a class="selected" href="./servicios.html">SERVICIOS</a></li>
+					<li class="main-nav__link"><a class="selected" href="#">SERVICIOS</a></li>
 					<li class="main-nav__link"><a href="./promos.html">PROMOS</a></li>
-					<li class="main-nav__link"><a href="./contacto.html">CONTACTO</a></li>
+					<li class="main-nav__link"><a href="../views/contacto.html">CONTACTO</a></li>
 				</ul>
 			</nav>
 		</div>
 	</header>
     
-    <section id="servicios" class="cntGeneral bg-pattern">
-
+    <section id="servicios" class="cntGeneral">
+        <!-- Tiutulo de Pagina -->
 		<h2 class="title">Servicios</h2>
 
         <div class="cards">
             <div class="card" style="width: 18rem;">
                 <div class="card-img-top imgBox box1"></div>
                 <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Tortas Tematicas</h5>
-                <p class="card-text bakeryCardText">Tortas de diseño, elaboradas artesanalmente, con pasión y cuidado en cada detalle.</p>
+                    <h5 class="card-title bakeryCardTitle">Tortas Tematicas</h5>
+                    <p class="card-text bakeryCardText">Tortas de diseño, elaboradas artesanalmente, con pasión y cuidado en cada detalle.</p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-img-top imgBox box2"></div>
                 <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Mesas Dulces</h5>
-                <p class="card-text bakeryCardText">Cumpleaños Infantiles, Bodas, 15 años, Bautismo, Comunión, Despedidas y todo tipo de Eventos.</p>
+                    <h5 class="card-title bakeryCardTitle">Mesas Dulces</h5>
+                    <p class="card-text bakeryCardText">Cumpleaños Infantiles, Bodas, 15 años, Bautismo, Comunión, Despedidas y todo tipo de Eventos.</p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-img-top imgBox box3"></div>
                 <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Box Cumpleaños</h5>
-                <p class="card-text bakeryCardText">Divertidas cajas con productos surtidos elegidos por vos. Desayunos y meriendas divertidas para festejar tu dia mas importante.</p>
+                    <h5 class="card-title bakeryCardTitle">Box Cumpleaños</h5>
+                    <p class="card-text bakeryCardText">Divertidas cajas con productos surtidos elegidos por vos. Desayunos y meriendas divertidas para festejar tu dia mas importante.</p>
+                </div>
+            </div>
+            
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box4"></div>
+                <div class="card-body">
+                    <h5 class="card-title bakeryCardTitle">Galletas Personalizadas</h5>
+                    <p class="card-text bakeryCardText">Personalizamos galletas de cualquier tematica, con logos, inscripciones, animales y objetos de todo tipo</p>
                 </div>
             </div>
         </div>
         <div class="cards">
-            <div class="card" style="width: 18rem;">
-                <div class="card-img-top imgBox box4"></div>
-                <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Galletas Personalizadas</h5>
-                <p class="card-text bakeryCardText">Personalizamos galletas de cualquier tematica, con logos, inscripciones, animales y objetos de todo tipo</p>
-                </div>
-            </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-img-top imgBox box5"></div>
                 <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Number Cake</h5>
-                <p class="card-text bakeryCardText">Las tan deseadas tortas numericas para tu cumple!! Elegilas de vainilla o chocolate, con dulce de leche o crema pastelera!</p>
+                    <h5 class="card-title bakeryCardTitle">Number Cake</h5>
+                    <p class="card-text bakeryCardText">Las tan deseadas tortas numericas para tu cumple!! Elegilas de vainilla o chocolate, con dulce de leche o crema pastelera!</p>
                 </div>
             </div>
 
             <div class="card" style="width: 18rem;">
                 <div class="card-img-top imgBox box6"></div>
                 <div class="card-body">
-                <h5 class="card-title bakeryCardTitle">Candy Bar</h5>
-                <p class="card-text bakeryCardText">Ideal surtido de galletitas, cake pops, mini cakes, tarteletitas dulces y galletitas personalizadas para los eventos más delicados y super detallistas!</p>
+                    <h5 class="card-title bakeryCardTitle">Candy Bar</h5>
+                    <p class="card-text bakeryCardText">Ideal surtido de galletitas, cake pops, mini cakes, tarteletitas dulces y galletitas personalizadas para los eventos más delicados y super detallistas!</p>
                 </div>
             </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box7"></div>
+                <div class="card-body">
+                    <h5 class="card-title bakeryCardTitle">Bombones</h5>
+                    <p class="card-text bakeryCardText">El mas rico chocolate hecho bombones! deleitá tu paladadar saboreando los distintos sabores que tenemos para vos.</p>
+                </div>
+            </div>
+
+            <div class="card" style="width: 18rem;">
+                <div class="card-img-top imgBox box8"></div>
+                <div class="card-body">
+                    <h5 class="card-title bakeryCardTitle">Huevos de Pascua</h5>
+                    <p class="card-text bakeryCardText">Una de las mejores opciones para sorpender a tu familia con estos super huevos de pascua! Rellenos, decorado y sobre todo, super sabrosos!</p>
+                </div>
+            </div>
+            
+
         </div>
 	</section>
 
 	<footer class="cntFooter">
-		<span>© 2021— My Bakery Bake Page</span>
-		<div>
-			<ul class="socialMedia">
-				<li><i class="fab fa-facebook"></i></li>
-				<li><i class="fab fa-whatsapp"></i></li>
-				<li><i class="fab fa-instagram"></i></li>
-				<li><i class="fab fa-twitter-square"></i></li>
-			</ul>
-		</div>
-	</footer>
+        <span>© 2021— My Bakery Bake Page</span>
+        
+        <div>
+            <ul class="socialMedia">
+                <li><a href="https://facebook.com" target="_blank"><i class="fab fa-facebook iconColor"></i></a></li>
+                <li><a href="https://whatsapp.com" target="_blank"><i class="fab fa-whatsapp iconColor"></i></a></li>
+                <li><a href="https://instagram.com" target="_blank"><i class="fab fa-instagram iconColor"></i></a></li>
+                <li><a href="https://twitter.com" target="_blank"><i class="fab fa-twitter-square iconColor"></i></a></li>
+            </ul>
+        </div>
+    </footer>
+
+    
+	<script src="../assets/app.js"></script>
 </body>
 </html>
